@@ -51,9 +51,6 @@ Build-Depends: cdbs,
 	libevent-dev,
 	yasm,
 	libv8-dev (>= 2.2.7),
-	libavcodec-dev,
-	libavformat-dev,
-	libavutil-dev,
 	libprotobuf-dev,
 	protobuf-compiler,
 	libglewmx1.5-dev
